Complete Tests Coverage; Upload Fixes; Security Fixes; Nav Fixes; Refactoring

--- a/src/main/webapp/source/index.html
+++ b/src/main/webapp/source/index.html
@@ -91,6 +91,7 @@
 
     <script src="scripts/modules/upload/upload.module.js"></script>
     <script src="scripts/modules/upload/upload.globals.js"></script>
+    <script src="scripts/modules/upload/controllers/musician-upload.controller.js"></script>
     <script src="scripts/modules/upload/services/music-upload.service.js"></script>
     <script src="scripts/modules/upload/components/music-agreement-form.controller.js"></script>
     <script src="scripts/modules/upload/components/music-agreement-form.directive.js"></script>
@@ -102,6 +103,8 @@
     <script src="scripts/modules/upload/components/music-owner-information-form.directive.js"></script>
     <script src="scripts/modules/upload/components/music-sound-information-form.controller.js"></script>
     <script src="scripts/modules/upload/components/music-sound-information-form.directive.js"></script>
+    <script src="scripts/modules/upload/components/music-summary-form.controller.js"></script>
+    <script src="scripts/modules/upload/components/music-summary-form.directive.js"></script>
     <script src="scripts/modules/upload/components/music-file-uploader.controller.js"></script>
     <script src="scripts/modules/upload/components/music-file-uploader.directive.js"></script>
 
